--- a/views/register.hbs
+++ b/views/register.hbs
@@ -4,7 +4,7 @@
 >
   <form
     class="form-signin w-25 p-4 bg-light rounded border text-center"
-    action="/register"
+    action="/auth/register"
     method="POST"
   >
     <h1 class="h3 mb-3 font-weight-normal"> Register </h1>
