--- a/views/login.hbs
+++ b/views/login.hbs
@@ -3,7 +3,7 @@
         action="/auth/login"
           method="POST"
     >
-  <h1 class="h3 mb-3 font-weight-normal"> Sign In </h1>
+  <h1 class="h3 mb-3 font-weight-normal"> Đăng Nhập </h1>
   <input
     type="text"
     id="username"
@@ -24,8 +24,8 @@
     value="admin"
   />
 
-  <button class="btn btn-lg btn-primary btn-block my-4" type="submit"> Sign In </button>
-  <p>Don't have an account? <a href="/auth/register">Register</a></p>
+  <button class="btn btn-lg btn-primary btn-block my-4" type="submit"> Đăng Nhập </button>
+  <p>Chưa có tài khoản? <a href="/auth/register">Đăng ký</a></p>
 
 </form>
 </div>
