--- a/views/partials/AddButton.hbs
+++ b/views/partials/AddButton.hbs
@@ -34,6 +34,6 @@
 </div>
 
 <button type="button" class="btn btn-primary mt-3 w-100" data-toggle="modal" data-target="#exampleModal">
-    +
+    Thêm
 </button>
 </div>
